--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -2,13 +2,11 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel ="stylesheet" href = css/style.css>
-    <title>Главная страниц</title>
+    <meta http-equiv="refresh" content="0; url=resume">
+    <title>Redirecting...</title>
 </head>
 <body>
-<header>Добро пожаловать в мой проект!</header>
-<p>Это главная страница.</p>
-<footer>Добро пожаловать в мой проект!</footer>
+<p>If you are not redirected automatically, follow this <a href="resume">link to Resume List</a>.</p>
 </body>
 </html>
+
